objects/vlocity_cmt__ContractLineItem__c.object
<CustomObject>
    <description>Represents the product and services covered by a contract.</description>
    <fields>
        <fullName>vlocity_cmt__AssetId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The asset that this Order Product was pushed to by Order To Asset</description>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Order Product</relationshipLabel>
        <relationshipName>OrderProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AssetReferenceId__c</fullName>
        <description>Unique identifier of the asset refereced by this line item. Used by Vlocity CPQ to track the asset across various objects in the asset-based ordering lifecycle.</description>
        <label>AssetReferenceId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributesData__c</fullName>
        <label>Attributes Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Availability__c</fullName>
        <formula>vlocity_cmt__ContractId__r.Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account responsible for paying for the line item.</description>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products (Billing Account)</relationshipLabel>
        <relationshipName>BillingAccountContractItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractId__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Line Items</relationshipLabel>
        <relationshipName>ContractLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContractVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED.</description>
        <label>Contract Version</label>
        <referenceTo>vlocity_cmt__ContractVersion__c</referenceTo>
        <relationshipLabel>Contract Lines</relationshipLabel>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveEndDate__c</fullName>
        <description>End date of line item</description>
        <label>Effective End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveStartDate__c</fullName>
        <description>Start date of line item</description>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONAttribute__c</fullName>
        <description>DEPRECATED. Use AttributesData instead.</description>
        <label>JSONAttribute - Deprecated</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LineNumber__c</fullName>
        <description>Vlocity line number generated by code which serves to sequence the line items and organize them into a hierarchy.</description>
        <label>LineNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LineStatus__c</fullName>
        <description>Status of this Contract Line Item</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Modification__c</fullName>
        <description>DEPRECATED.</description>
        <label>Modification#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeCalculatedPrice__c</fullName>
        <description>System discounted price ie after Pricer run</description>
        <label>One Time Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeCharge__c</fullName>
        <label>One Time Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeDiscountPrice__c</fullName>
        <label>One Time Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeManualDiscount__c</fullName>
        <description>Discount percentage entered by CSR</description>
        <label>One Time Manual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OneTimeTotal__c</fullName>
        <description>Final total after all pricing and * Quantity</description>
        <label>One Time Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OriginalLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the line item id that this line item references (e.g. if this line item is due to a contract amendment)</description>
        <label>Original Line Item Id</label>
        <referenceTo>vlocity_cmt__ContractLineItem__c</referenceTo>
        <relationshipName>Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageCalculatedPrice__c</fullName>
        <label>Overage Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageCharge__c</fullName>
        <label>Overage Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageDiscountPrice__c</fullName>
        <label>Overage Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageManualDiscount__c</fullName>
        <label>Overage Manual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageTotal__c</fullName>
        <description>Final total after all pricing and * Quantity</description>
        <label>Overage Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OverageUOM__c</fullName>
        <label>Overage UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Minute</fullName>
                    <default>true</default>
                    <label>Per Minute</label>
                </value>
                <value>
                    <fullName>Per Text</fullName>
                </value>
                <value>
                    <fullName>Per Gigabyte</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricebookEntryId__c</fullName>
        <description>Price book entry identifier</description>
        <label>Price book Entry Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductCode__c</fullName>
        <description>Formula: Product Code from the associated product.</description>
        <formula>vlocity_cmt__Product2Id__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductDescription__c</fullName>
        <description>Formula: Product Description from the associated product.</description>
        <formula>vlocity_cmt__Product2Id__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DEPRECATED. Use Product2Id__c instead.</description>
        <label>Product Name - Deprecated</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contract Lines (Product Name)</relationshipLabel>
        <relationshipName>GroupBenefitsPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductName__c</fullName>
        <description>Product Name</description>
        <formula>vlocity_cmt__Product2Id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductNumber__c</fullName>
        <label>Product Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Quantity__c</fullName>
        <description>Product Quantity</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringCalculatedPrice__c</fullName>
        <label>Recurring Calculated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringCharge__c</fullName>
        <label>Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringDiscountPrice__c</fullName>
        <label>Recurring Discount Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringManualDiscount__c</fullName>
        <label>Recurring Manual Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringTotal__c</fullName>
        <description>Final total after all pricing and * Quantity</description>
        <label>Recurring Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecurringUOM__c</fullName>
        <description>The recurring price unit of measure.</description>
        <label>Recurring UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SerialNumber__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account (e.g., a location or a subscriber) that is the user of the service.</description>
        <label>Service Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products (Service Account)</relationshipLabel>
        <relationshipName>ServiceAccountContractItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Status__c</fullName>
        <description>DEPRECATED.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TotalPrice__c</fullName>
        <description>Total Price</description>
        <formula>vlocity_cmt__Quantity__c *   vlocity_cmt__UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UnitPrice__c</fullName>
        <description>Unit Price</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contract Line</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__ValidateEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>DATEVALUE(vlocity_cmt__EffectiveEndDate__c)  &gt;  vlocity_cmt__ContractId__r.EndDate</errorConditionFormula>
        <errorMessage>Contract Line Item Effective End Date has to be earlier than Contract End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>vlocity_cmt__ValidateStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>DATEVALUE(vlocity_cmt__EffectiveStartDate__c)  &lt;  vlocity_cmt__ContractId__r.StartDate</errorConditionFormula>
        <errorMessage>Contract Line Item Effective Start Date has to be later than Contract Start Date</errorMessage>
    </validationRules>
</CustomObject>